--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/generated)
 pico_generate_pio_header(ws2812 ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
 target_sources(ws2812 PRIVATE main.c)
 
-target_link_libraries(ws2812 PRIVATE pico_stdlib hardware_pio hardware_i2c)
+target_link_libraries(ws2812 PRIVATE pico_stdlib hardware_pio hardware_i2c hardware_adc)
 pico_add_extra_outputs(ws2812) 
 
 pico_enable_stdio_usb(ws2812 1)
