--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,13 @@ set(PICO_BOARD pico_w CACHE STRING "Board type")
 include(pico_sdk_import.cmake)
 project(Projeto C CXX ASM)
 pico_sdk_init()
-add_executable(ws2812 main.c inc/ssd1306.c)
+add_executable(Projeto main.c inc/ssd1306.c)
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/generated)
-pico_generate_pio_header(ws2812 ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
-target_sources(ws2812 PRIVATE main.c)
+pico_generate_pio_header(Projeto ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
+target_sources(Projeto PRIVATE main.c)
 
-target_link_libraries(ws2812 PRIVATE pico_stdlib hardware_pio hardware_i2c hardware_adc)
-pico_add_extra_outputs(ws2812) 
+target_link_libraries(Projeto PRIVATE pico_stdlib hardware_pio hardware_i2c hardware_adc)
+pico_add_extra_outputs(Projeto) 
 
-pico_enable_stdio_usb(ws2812 1)
-pico_enable_stdio_uart(ws2812 1)
+pico_enable_stdio_usb(Projeto 1)
+pico_enable_stdio_uart(Projeto 1)
